# NBA

./: .gitignore  README.md  project_plan.md  pyproject.toml  test.py  test_clustering.py  test_ingestion.py  test_simple.py
config/: config.py
src/: __init__.py
src/analysis/: __init__.py  clustering.py
src/data/: __init__.py  ingestion.py
src/llm/: __init__.py
